--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>MailApp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>MailApp</name>
-	<description>Simple REST MaillApp</description>
+	<description>Simple REST MailApp</description>
 
 	<properties>
 		<java.version>1.8</java.version>
