--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.thymeleaf.cache=false
 
+spring.mail.host=smtp.example.com
+spring.mail.port=587
+spring.mail.username=no-reply@example.com
+spring.mail.password=pass
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.test-connection=false
+
